# bakusoku-memd

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  docker-compose.yml
bakusoku-memd-cpp/: CMakeLists.txt  Dockerfile
bakusoku-memd-cpp/src/: main.cpp
bakusoku-memd-lib/: .gitignore  CMakeLists.txt  local-properties-default.cmake
bakusoku-memd-lib/include/: Spline.hpp  define.hpp  memd.hpp
bakusoku-memd-lib/test/: main.cpp
bakusoku-memd-lib/test/res/: ndarray_173_5_seed0_11dim_imf000.csv  ndarray_173_5_seed0_11dim_imf001.csv  ndarray_173_5_seed0_11dim_imf002.csv  ndarray_173_5_seed0_11dim_imf003.csv  ndarray_173_5_seed0_11dim_imf004.csv  ndarray_173_5_seed0_11dim_imf005.csv  ndarray_173_5_seed0_11dim_imf006.csv  ndarray_173_5_seed0_11dim_imf007.csv  ndarray_173_5_seed0_11dim_imf008.csv
bakusoku-memd-lib/test/tools/: .gitignore  make_data.py
sampledata/: ndarray_173_5_seed0.csv
